# maddi-type

./: Cargo.toml  README.md  REUSE.toml  flake.nix  hobbit-ch01.progress.json  hobbit-ch01.txt
src/: cli.rs  hobbit-ch01.txt  main.rs
